Final commit: project completed